# WebService::Recruit::HotPepper Changes

2007/08/20 version 0.01:
    - the first release!
