@@ -1,14 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         WebService-Recruit-HotPepper
-version:      0.01
-version_from: lib/WebService/Recruit/HotPepper.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                WebService-Recruit-HotPepper
+version:             0.02
+abstract:            ~
+license:             perl
+generated_by:        ExtUtils::MakeMaker version 6.36
+distribution_type:   module
+requires:     
     Class::Accessor:               0
     Class::Accessor::Children:     0
     Test::More:                    0
     XML::OverHTTP:                 0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
