@@ -2,7 +2,7 @@ package WebService::Recruit::HotPepper;
 use strict;
 use base qw( Class::Accessor::Fast );
 use vars qw( $VERSION );
-$VERSION = '0.01';
+$VERSION = '0.02';
 
 use WebService::Recruit::HotPepper::GourmetSearch;
 use WebService::Recruit::HotPepper::ShopSearch;
